# ML-Algo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  PUNCHLIST.md  README.md  SPEC.md  environment.yml  pyproject.toml
artifacts/local_run_1761163404/: calibration.json  calibrator.json  catboost.cbm  config.json  metadata.json  metrics.json  splits.npz
artifacts/local_run_1761163940/: calibration.json  calibrator.json  catboost.cbm  metadata.json  metrics.json
ci/: pipeline.yml
config/: data.yaml  model.yaml  risk.yaml
data/tmp/: local_sample.csv
docs/: api_contracts.md
docs/runbooks/: architecture.md  colab_gpu.md  compliance.md  deployment.md  reproducibility.md
notebooks/: colab_training.ipynb
scripts/: train_local.py
src/ml_algo/: __init__.py  ann_index.py  calibration.py  cv_protocol.py  data_ingest.py  features.py  heikin_ashi.py  hyperbolic.py  kernels.py  metrics.py  model_catboost.py  performance.py  pipeline.py  projectx_client.py  quality_gates.py  risk_compliance.py  robust_scaling.py  schema.py  (+1 more)
tests/: test_ann_index.py  test_architecture.py  test_cv_protocol.py  test_data_ingest.py  test_heikin_ashi.py  test_hyperbolic.py  test_kernels_nw.py  test_metrics.py  test_model_catboost.py  test_performance.py  test_pipeline_phase02.py  test_pipeline_phase03.py  test_pipeline_phase04.py  test_pipeline_phase05.py  test_pipeline_phase06.py  test_pipeline_phase07.py  test_pipeline_quality.py  test_projectx_client.py  test_quality_gates.py  test_risk_compliance.py  test_run_metadata.py  test_schema.py  test_tyler_whitening.py  test_validation.py
(+2 files in other folders)
