[project]
name = "ml_algo"
version = "0.1.0"
description = "Hyperbolic-ANN + kernel ensemble pipeline per SPEC.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pyarrow",
    "tqdm",
    "typer",
    "pydantic",
    "rich",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "black",
    "isort",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ml_algo"]
package-dir = {"" = "src"}
